# chromophenyl

./: CMakeLists.txt
src/: CMakeLists.txt  Chromophenyl.cpp  Chromophenyl.h  ChromophenylConfig.kcfgc  chromophenyl.qrc  metadata.json  options.kcfg  plugin.cpp  shader.frag  shader_core.frag
src/kcm/: CMakeLists.txt  ChromophenylKCM.cpp  ChromophenylKCM.h  ChromophenylKCM.ui  metadata.json  plugin.cpp
